--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,9 @@ knitr::opts_chunk$set(
 
 # redditsuite
 
+Git location per episode 
 
+[Episode 5](https://github.com/benj7/redditsuite/tree/episode-5)
 <!-- badges: start -->
 <!-- badges: end -->
 
@@ -29,35 +31,9 @@ The goal of redditsuite is to ...
 - shortcut to build your package : ctrl + shift + b 
 - shortcut to restart R session : ctlr + shift + F10 
 
-## Installation
-
-You can install the released version of redditsuite from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
 install.packages("redditsuite")
 ```
 
-## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(redditsuite)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
